# gnb

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: node.launch
src/: gnb_server.py
src/models/: backbone.py  graspnet.py  modules.py
src/utils/: collision_detector.py  grasp.py  label_generation.py
