<?xml version="1.0"?>
<package format="2">
  <name>gnb</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="todo@todo.com">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
